添加二维码

--- a/fff/index.html
+++ b/fff/index.html
@@ -703,7 +703,7 @@
 			height:30%;
 			position: absolute;
 			top:18%;
-			left:21%;
+			left:25%;
 		}
 		.con6-list img{
 			width:100%;
@@ -1033,7 +1033,7 @@
 			 				<li class='con6-list'>
 			 					<div>
 			 						<span>
-			 							<img src="img/page-quan2.png" alt="" />
+			 							<img src="img/me-code.png" alt="" />
 			 						</span>
 			 					</div>
 			 				</li>
