--- a/fff/index.html
+++ b/fff/index.html
@@ -1030,7 +1030,7 @@
 			 						<span>[静待佳音]</span>
 			 					</div>	
 			 				</li>
-			 				<li class='con6-list'>
+			 				<li class='con6-list ani' swiper-animate-effect="rotateIn">
 			 					<div>
 			 						<span>
 			 							<img src="img/me-code.png" alt="" />
