--- a/fff/index.html
+++ b/fff/index.html
@@ -800,12 +800,12 @@
 
 			 				<li class='content-2-comment con2-name ani' swiper-animate-effect='fadeInDown'>
 			 					<div >
-			 						<span>姓名：孙秋月  性别：女</span>
+			 						<span>姓名：孙秋月　　性别：女</span>
 			 					</div>
 			 				</li>
 			 				<li class='content-2-comment con2-address ani' swiper-animate-effect='fadeInDown'>
 			 					<div >
-			 						<span>籍贯：   河南           专业：   计算机信息管理</span>
+			 						<span>籍贯：   河南　　　专业：   计算机信息管理</span>
 			 					</div>
 			 				</li>
 			 				<li class='content-2-comment con2-email ani' swiper-animate-effect='fadeInDown' >
@@ -959,7 +959,7 @@
 			 				<li class='page4-text text4-4  ani' swiper-animate-effect='bounceInUp'>
 			 					<div class='text-t-4 text4-comment'>
 			 						<span>2016</span>
-			 						<div class='clamp-coment'>在某公司担任。。。。。。就职</div>
+			 						<div class='clamp-coment'>在某公司担任。。。。。。一职</div>
 			 					</div>
 			 				</li>
 			 				
