--- a/anli.html
+++ b/anli.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width ,initial-scale=1">
 		
 		
-		<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="dist/css/bootstrap.min.css">
 		 <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -349,8 +349,8 @@
 		</div><!-- /.modal -->
 	    
 	    
-        <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> 
+        <script src="fff/js/jquery-2.1.0.js"></script>
+        <script src="dist/js/bootstrap.min.js"></script> 
 		
 		<script>
 		    $(function ($) {
